--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/googletest"]
 	path = lib/googletest
 	url = https://github.com/google/googletest
+[submodule "lib/glbinding"]
+	path = lib/glbinding
+	url = https://github.com/cginternals/glbinding
