Finally coming back to this
Buncha changes:
- GL_CHECK macro to do error checking
- Bump to C++17
- Added glm for matrix math
- Removed geometry structures in favor of glm
- Fixed VertexArray and MultiAttribBuffer cooperation, render triangle
  test should work now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.11.0)
 
 include(ExternalProject)
 
@@ -7,13 +7,15 @@ project(VNgine)
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
+set(OpenGL_GL_PREFERENCE "GLVND")
 
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glfw3 3.2 REQUIRED)
+find_package(glm REQUIRED)
 
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -Wall -Wextra -Werror")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -Wall -Wextra -Werror -rdynamic")
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
@@ -49,10 +51,11 @@ add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
 set(VNGINE_SOURCES
 	"src/graphics/glwrapping/Shader.cpp"
 	"src/graphics/glwrapping/ShaderProgram.cpp"
+	"src/graphics/glwrapping/VertexArray.cpp"
 	"src/init/GameInit3D.cpp"
 )
 
-set(LIBS ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} ${GLEW_LIBRARY} glfw -ldl)
+set(LIBS OpenGL::GL OpenGL::GLU GLEW glm glfw -ldl)
 
 add_compile_definitions(VNGINE_OPENGL_LIB="$<IF:$<BOOL:${OPENGL_gl_LIBRARY}>,${OPENGL_gl_LIBRARY},${OPENGL_opengl_LIBRARY}>")
 add_library(vngine STATIC ${VNGINE_SOURCES})
@@ -66,7 +69,6 @@ enable_testing()
 
 set(VNGINE_TESTS
 	"test/unit/main.cpp"
-	"test/unit/PointTest.cpp"
 	"test/unit/GLHelperTest.cpp"
 )
 
