Revert "Replaced GLEW with glbinding"
This reverts commit daa4d76d20618558688643c5e98ce6c63eace959.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10.0)
+cmake_minimum_required(VERSION 3.0.0)
 
 include(ExternalProject)
 
@@ -8,34 +8,14 @@ set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
-set(OpenGL_GL_PREFERENCE "GLVND")
 find_package(OpenGL REQUIRED)
+find_package(GLEW REQUIRED)
 find_package(glfw3 3.2 REQUIRED)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -rdynamic -Wall -Wextra -Werror")
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -Wall -Wextra -Werror")
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
-
-####################################
-#### From-source Dependencies ######
-####################################
-
-ExternalProject_Add(glbinding-github
-	GIT_REPOSITORY	https://github.com/cginternals/glbinding.git
-	GIT_TAG			v3.1.0
-	STEP_TARGETS	glbinding glbinding-aux
-	SOURCE_DIR      "${CMAKE_CURRENT_BINARY_DIR}/glbinding-src"
-	BINARY_DIR      "${CMAKE_CURRENT_BINARY_DIR}/glbinding-build"
-	CMAKE_ARGS		-DOPTION_BUILD_TOOLS=OFF -DOPTION_BUILD_EXAMPLES=OFF -DCMAKE_INSTALL_PREFIX=.
-)
-ExternalProject_Get_Property(glbinding-github binary_dir)
-set(GLBINDING_INSTALL_DIR ${binary_dir})
-include_directories(${GLBINDING_INSTALL_DIR}/include)
-add_library(glbinding SHARED IMPORTED)
-set_target_properties(glbinding PROPERTIES IMPORTED_LOCATION ${GLBINDING_INSTALL_DIR}/lib/libglbinding.so)
-add_library(glbinding-aux SHARED IMPORTED)
-set_target_properties(glbinding-aux PROPERTIES IMPORTED_LOCATION ${GLBINDING_INSTALL_DIR}/lib/libglbinding-aux.so)
 
 # Download and unpack googletest at configure time
 configure_file(cmake/googletest-download.cmake googletest-download/CMakeLists.txt)
@@ -72,17 +52,10 @@ set(VNGINE_SOURCES
 	"src/init/GameInit3D.cpp"
 )
 
-set(LIBS
-	OpenGL::GL
-	glbinding
-	glbinding-aux
-	glfw
-	dl
-)
+set(LIBS ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} ${GLEW_LIBRARY} glfw -ldl)
 
 add_compile_definitions(VNGINE_OPENGL_LIB="$<IF:$<BOOL:${OPENGL_gl_LIBRARY}>,${OPENGL_gl_LIBRARY},${OPENGL_opengl_LIBRARY}>")
 add_library(vngine STATIC ${VNGINE_SOURCES})
-add_dependencies(vngine glbinding-github)
 target_link_libraries(vngine ${LIBS})
 
 #######################################################
