Listener interface and KeyListener implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
 #################################
 
 set(VNGINE_SOURCES
+  "src/event/KeyListener.cpp"
 	"src/graphics/glwrapping/Shader.cpp"
 	"src/graphics/glwrapping/ShaderProgram.cpp"
   "src/graphics/glwrapping/VertexArray.cpp"
@@ -89,3 +90,6 @@ target_link_libraries(vngine_render_triangle ${LIBS} vngine)
 
 add_executable(vngine_render_triangle_model "test/rendering/TriangleModel.cpp")
 target_link_libraries(vngine_render_triangle_model ${LIBS} vngine)
+
+add_executable(vngine_event_key "test/event/KeyTest.cpp")
+target_link_libraries(vngine_event_key ${LIBS} vngine pthread)
